Added rswag docs for the available rooms feature
