# app/serializers/room_serializer.rb
@@ -1,0 +1,3 @@
+class RoomSerializer < ActiveModel::Serializer
+  attributes :number, :hotel_id, :capacity, :amenities
+end
